turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
	(rule(state)(couleur)(rule(state)(couleur))) match
                                         ^