turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
val STOPP:Int = 0;
val DEVANT:Int = 1;
val GAUCHE:Int = 2;
val DEMI_TOUR:Int = 3;
val DROITE:Int = 4;
val MVT_SUIVANT = 1;

    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {

	var couleur:Int = couleurTab(colors, getCouleurSol());

	setCouleurSol(colors((couleur + 1) % colors.length));
	
	(rule(state)(couleur)(rule(state)(couleur))) match
	{
		case STOPP => ();
		case DEVANT => avance();
		case GAUCHE => gauche(); avance();
		case DEMI_TOUR => retourne(); avance();
		case DROITE => droite(); avance();
	}
        
    }

def setCouleurSol(c:Color)
{
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
}

def couleurTab(tab:Array[Color], c:Color):Int = 
{
	var i:Int = 0;
	
	while (c != tab(i))
		i = i + 1;

	return i;
}


